--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,12 +9,28 @@
 
     100% {
         transform: scale(1);
+        opacity: 0.7;
+    }
+}
+
+@keyframes scale-up-logo {
+    0% {
+        transform: scale(0.8);
+        opacity: 0;
+    }
+
+    100% {
+        transform: scale(1);
         opacity: 1;
     }
 }
 
 .animate-scale-up {
     animation: scale-up 0.5s ease-out forwards;
+}
+
+.animate-scale-up-logo {
+    animation: scale-up-logo 0.5s ease-out forwards;
 }
 
 .animation-delay-200 {
